...
        }
        if !id.file.isMarkdown {
            menu.addAction(UIAlertAction(title: "Open File", style: .default) { _ in
                id.file.url.open()
            })
        }
        menu.addAction(UIAlertAction(title: "Delete \(id.file.isMarkdown ? "Note" : "File")", style: .destructive) { [weak self] _ in
            let confirm = UIAlertController(title: "Delete \(self?.entry?.name ?? id.name)?", message: "This operation cannot be undone.", preferredStyle: .alert)
            confirm.addAction(UIAlertAction(title: "Cancel", style: .cancel))
            confirm.addAction(UIAlertAction(title: "Delete", style: .destructive) { _ in
                Task {
                    guard let self = self else { fatalError("lost self") }
                    if let document = self.document {
                        await document.close()
                    }
                    self.document = nil
...
    private func snapshot() {
        var items: [UIBarButtonItem] = []
        if entry != nil || document != nil {
            items.append(menuButton)
        }
        let toggle = UIBarButtonItem(image: edit ? UIImage(systemName: "checkmark") : UIImage(systemName: "pencil"), style: .plain, target: self, action: #selector(toggleEdit))
        toggle.title = "Toggle Editing"
        items.append(toggle)
        navigationItem.rightBarButtonItems = items
        var snapshot = NSDiffableDataSourceSnapshot<Section, Item>()
        defer {
            dataSource.apply(snapshot, animatingDifferences: animating)
            animating = true
...
