...

    @objc private func menu() {
        let menu = UIAlertController(title: nil, message: nil, preferredStyle: .actionSheet)
        if noteContent != nil {
            menu.addAction(UIAlertAction(title: "Share", style: .default) { [weak self] _ in self?.share() })
        }
        menu.addAction(UIAlertAction(title: "Delete Note", style: .destructive) { [weak self] _ in
            guard let note = self?.note else { return }
            let confirm = UIAlertController(title: "Delete \(note.name)?", message: "This operation cannot be undone.", preferredStyle: .alert)
            confirm.addAction(.init(title: "Cancel", style: .cancel))
            confirm.addAction(.init(title: "🔥", style: .destructive) { [weak self] _ in
                do {
                    try World.shared.delete(url: Container.url(for: note.file))
...
