...
            defaults.set(!icloud, forKey: disableCloud)
        }
    }

    init() {
        #if DEBUG
            if let dir = ProcessInfo.processInfo.environment["MARKOLOGY_DIR"] {
                icloud = false
                current = URL(fileURLWithPath: dir)
                return
            }
        #endif
        guard !defaults.bool(forKey: disableCloud), Container.icloudEnabled else {
...
