...
    required init?(coder _: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }

    override func viewDidLoad() {
        super.viewDidLoad()
        addLink = UIBarButtonItem(title: "Add Link", style: .plain, target: self, action: #selector(link))
        let buttons = UIToolbar(frame: .infinite).anchored(to: view, horizontal: true)
        buttons.items = [
            addLink!,
            .flexibleSpace(),
            UIBarButtonItem(barButtonSystemItem: .save, target: self, action: #selector(save)),
            UIBarButtonItem(barButtonSystemItem: .cancel, target: self, action: #selector(cancel)),
...
